--- a/gestao-de-viagens/src/app/app.component.html
+++ b/gestao-de-viagens/src/app/app.component.html
@@ -1,3 +1,18 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+  <ion-menu contentId="main-content">
+    <ion-header>
+      <ion-toolbar>
+        <ion-title>Menu</ion-title>
+      </ion-toolbar>
+    </ion-header>
+    <ion-content>
+      <ion-list>
+        <ion-item routerLink="/home">MyTravel</ion-item>
+        <ion-item routerLink="/create-travel">Criar Viagem</ion-item>
+        <ion-item routerLink="/list-travels">Ver Viagens</ion-item>
+      </ion-list>
+    </ion-content>
+  </ion-menu>
+
+  <ion-router-outlet id="main-content"></ion-router-outlet>
 </ion-app>
