--- a/gestao-de-viagens/src/app/home/home.page.html
+++ b/gestao-de-viagens/src/app/home/home.page.html
@@ -1,34 +1,14 @@
-<ion-header [translucent]="true">
-  <ion-menu contentId="main-content">
-    <ion-header>
-      <ion-toolbar>
-        <ion-title>Menu Content</ion-title>
-      </ion-toolbar>
-    </ion-header>
-    <ion-content class="ion-padding">This is the menu content.</ion-content>
-  </ion-menu>
-  <div class="ion-page" id="main-content">
-    <ion-header>
-      <ion-toolbar>
-        <ion-buttons slot="start">
-          <ion-menu-button></ion-menu-button>
-        </ion-buttons>
-        <ion-title>Menu</ion-title>
-      </ion-toolbar>
-    </ion-header>
-    <ion-content class="ion-padding"> Tap the button in the toolbar to open the menu. </ion-content>
-  </div>
+<ion-header>
+  <ion-toolbar>
+    <ion-title>MyTravel</ion-title>
+  </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+<ion-content class="ion-padding">
+  <div class="welcome-container">
+    <h1>Bem-vindo à MyTravel!</h1>
+    <p>Explore, planeje e compartilhe suas viagens de forma fácil e rápida.</p>
+    <ion-button expand="full" routerLink="/list-travels">Ver Viagens</ion-button>
+    <ion-button expand="full" routerLink="/create-travel">Criar Viagem</ion-button>
   </div>
 </ion-content>
