--- a/gestao-de-viagens/src/app/update-travel/update-travel.component.html
+++ b/gestao-de-viagens/src/app/update-travel/update-travel.component.html
@@ -1,31 +1,62 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>Atualizar Viagem</ion-title>
+    <ion-buttons slot="end">
+      <ion-button (click)="toggleEdit()">
+        {{ isEditing ? 'Cancelar' : 'Editar' }}
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <form (ngSubmit)="updateTravel()">
+  <form (ngSubmit)="isEditing ? updateTravel() : null">
     <ion-item>
       <ion-label position="floating">Descrição</ion-label>
-      <ion-input [(ngModel)]="travelData.description" name="description" required></ion-input>
+      <ion-input [(ngModel)]="travelData.description" name="description" required [disabled]="!isEditing"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label position="floating">Tipo</ion-label>
-      <ion-input [(ngModel)]="travelData.type" name="type" required></ion-input>
+      <ion-input [(ngModel)]="travelData.type" name="type" required [disabled]="!isEditing"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label position="floating">Estado</ion-label>
-      <ion-input [(ngModel)]="travelData.state" name="state" required></ion-input>
+      <ion-input [(ngModel)]="travelData.state" name="state" required [disabled]="!isEditing"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label position="floating">Início</ion-label>
-      <ion-datetime [(ngModel)]="travelData.startAt" name="startAt" required></ion-datetime>
+      <ion-datetime [(ngModel)]="travelData.startAt" name="startAt" required [disabled]="!isEditing"></ion-datetime>
     </ion-item>
     <ion-item>
       <ion-label position="floating">Fim</ion-label>
-      <ion-datetime [(ngModel)]="travelData.endAt" name="endAt" required></ion-datetime>
+      <ion-datetime [(ngModel)]="travelData.endAt" name="endAt" required [disabled]="!isEditing"></ion-datetime>
     </ion-item>
-    <ion-button expand="full" type="submit">Atualizar Viagem</ion-button>
+
+    <ion-list>
+      <ion-item *ngFor="let location of travelData.locations">
+        <ion-label>
+          <h2>Local: {{ location.description }}</h2>
+          <p>Tipo: {{ location.type }}</p>
+          <p>Estado: {{ location.state }}</p>
+          <p>Início: {{ location.startAt | date }}</p>
+          <p>Fim: {{ location.endAt | date }}</p>
+        </ion-label>
+        <ion-button *ngIf="isEditing" (click)="editLocation(location)">Editar</ion-button>
+      </ion-item>
+    </ion-list>
+
+    <ion-button expand="full" type="submit" *ngIf="isEditing">Atualizar Viagem</ion-button>
   </form>
+
+  <ion-item>
+    <ion-input [(ngModel)]="newComment" placeholder="Escreva um comentário..."></ion-input>
+    <ion-button (click)="addComment()">Adicionar</ion-button>
+  </ion-item>
+
+  <ion-list>
+    <ion-item *ngFor="let comment of travelData.comments">
+      <ion-label>{{ comment.comment }}</ion-label>
+      <ion-button (click)="deleteComment(comment.id)" color="danger" size="small">Deletar</ion-button>
+    </ion-item>
+  </ion-list>
 </ion-content>
