--- a/gestao-de-viagens/src/app/app.component.html
+++ b/gestao-de-viagens/src/app/app.component.html
@@ -10,6 +10,8 @@
         <ion-item routerLink="/home">MyTravel</ion-item>
         <ion-item routerLink="/create-travel">Criar Viagem</ion-item>
         <ion-item routerLink="/list-travels">Ver Viagens</ion-item>
+        <ion-item routerLink="/local">Criar Locais</ion-item>
+        <ion-item routerLink="/list-local">Ver Locais</ion-item>
       </ion-list>
     </ion-content>
   </ion-menu>
