--- a/gestao-de-viagens/src/app/home/home.page.html
+++ b/gestao-de-viagens/src/app/home/home.page.html
@@ -10,5 +10,6 @@
     <p>Explore, planeje e compartilhe suas viagens de forma fácil e rápida.</p>
     <ion-button expand="full" routerLink="/list-travels">Ver Viagens</ion-button>
     <ion-button expand="full" routerLink="/create-travel">Criar Viagem</ion-button>
+    <ion-button expand="full" routerLink="/local">Criar Local</ion-button>
   </div>
 </ion-content>
