--- a/gestao-de-viagens/src/app/update-travel/update-travel.component.html
+++ b/gestao-de-viagens/src/app/update-travel/update-travel.component.html
@@ -31,6 +31,13 @@
       <ion-label position="floating">Fim</ion-label>
       <ion-datetime [(ngModel)]="travelData.endAt" name="endAt" required [disabled]="!isEditing"></ion-datetime>
     </ion-item>
+    <ion-list>
+      <ion-item>
+        <ion-select label="Viagem" (ionChange)="onTravelChange($event)">
+          <ion-select-option *ngFor="let travel of travels" [value]="travel.id">{{ travel.description }}</ion-select-option>
+        </ion-select>
+      </ion-item>
+    </ion-list>
     <ion-button expand="full" type="submit" *ngIf="isEditing">Atualizar Viagem</ion-button>
   </form>
 
