--- a/gestao-de-viagens/src/app/list-travels/list-travels.page.html
+++ b/gestao-de-viagens/src/app/list-travels/list-travels.page.html
@@ -17,6 +17,7 @@
       </ion-label>
       <ion-button (click)="goToUpdateTravel(travel.id)" color="warning">Atualizar</ion-button>
       <ion-button (click)="deleteTravel(travel.id)" color="danger">Deletar</ion-button>
+      <ion-button (click)="goToDetailsTravel(travel.id)" color="primary">Ver Detalhes</ion-button> <!-- Botão para ver detalhes -->
 
       <!-- Campo para adicionar comentários -->
       
