--- a/gestao-de-viagens/src/app/local/local.page.html
+++ b/gestao-de-viagens/src/app/local/local.page.html
@@ -3,7 +3,10 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>Criar Local</ion-title>
+    <div style="display: flex; align-items: center;">
+      <img src="assets/img/mytravel.webp" alt="Logo MyTravel" style="height: 40px; margin-right: 10px;">
+      <ion-title>Criar Local</ion-title>
+    </div>
   </ion-toolbar>
 </ion-header>
 
