--- a/gestao-de-viagens/src/app/home/home.page.html
+++ b/gestao-de-viagens/src/app/home/home.page.html
@@ -1,6 +1,11 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>MyTravel</ion-title>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+    <ion-title>
+      <img src="assets/img/mytravel.webp" alt="Logo MyTravel" style="height: 40px;">
+    </ion-title>
   </ion-toolbar>
 </ion-header>
 
