--- a/gestao-de-viagens/src/app/update-local/update-local.page.html
+++ b/gestao-de-viagens/src/app/update-local/update-local.page.html
@@ -1,6 +1,12 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Atualizar Local</ion-title>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+    <div style="display: flex; align-items: center;">
+      <img src="assets/img/mytravel.webp" alt="Logo MyTravel" style="height: 40px; margin-right: 10px;">
+      <ion-title>Criar Viagens</ion-title>
+    </div>
   </ion-toolbar>
 </ion-header>
 
